--- a/Tsang, Kevin Website Project/home.html
+++ b/Tsang, Kevin Website Project/home.html
@@ -8,12 +8,12 @@
         <title>Document</title>
     </head>
     <body>
-        <h2 id="name">Kevin Tsang</h2>
+        <h2 id="name">Kevin Tsang &copy;</h2>
         <div class="links">
-            <p class=""><a href = "http://127.0.0.1:5500/skills.html"> Skills</a></p><br>
-            <p class=""><a href = "http://127.0.0.1:5500/favorites.html"> Favorites</a></p><br>
-            <p class=""><a href = "http://127.0.0.1:5500/spots.html"> Spots</a></p><br>
-            <p class=""><a href = "http://127.0.0.1:5500/title.html"> Title</a></p>
+            <p class="a"><a href = "http://127.0.0.1:5500/skills.html"> Skills</a></p><br>
+            <p class="a"><a href = "http://127.0.0.1:5500/favorites.html"> Favorites</a></p><br>
+            <p class="a"><a href = "http://127.0.0.1:5500/spots.html"> Spots</a></p><br>
+            <p class="a"><a href = "http://127.0.0.1:5500/title.html"> Title</a></p>
         </div>
     </body>
 </html>
