--- a/Tsang, Kevin Website Project/skills.html
+++ b/Tsang, Kevin Website Project/skills.html
@@ -8,6 +8,24 @@
         <title>Document</title>
     </head>
     <body>
-        <p class="back"><a href = "http://127.0.0.1:5500/home.html"> Home</a></p><br>
+        <table>
+            <tr>
+                <th class = "skills">Skills</th>
+            </tr>
+            <tr>
+                <td class="skills">I consider myself a pretty decent card thrower. I was inspired by a video of someone throwing a card that extinguished a candle, so after that it was just practicing over and over again.</td>
+            </tr>
+            <tr>
+                <td class="skills">I'm also a good typist with over a 100 words per minute on average. Probably couldn't teach this one though because most of it came from gaming and having to know where keys were.</td>
+            </tr>
+            <tr>
+                <td class="skills">I can play chess decently and could probably teach some basics</td>
+            </tr>
+            <tr>
+                <td class="skills">I can play 4X strategy games to a pretty good extent</td>
+            </tr>
+            <p class="back"><a href = "http://127.0.0.1:5500/home.html">Home</a></p><br>
+        </tab>
+        
     </body>
 </html>
