--- a/Tsang, Kevin Website Project/title.html
+++ b/Tsang, Kevin Website Project/title.html
@@ -10,7 +10,7 @@
     <body>
         <div class = "titletext">
             <h1>Welcome to my Website</h1><br>
-            <p style = "color:white;"><a href = "http://127.0.0.1:5500/home.html"> I hope you like it </a></p>
+            <span style = "color:white;"><span>-></span><a href = "http://127.0.0.1:5500/home.html"> I hope you like it </a><span><-</span></span>
         </div>
         <div class ="main"> 
     </div>
