--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
             Kevin's Website
         </h1>
         <h2>
-            Definitely not made in 2 hours
+            Here's how to pronounce my name
         </h2>
+        <div id = "sound">
+            <audio controls>
+                <source src="Rev.ogg" type="audio/ogg">
+                <source src="Rev.mp3" type="audio/mpeg">
+            </audio>
+        </div>
         <p class = "blurb">Hey there, my grade depends on you! So if you don't give me a 100, some unfortunate events* may occur within the near future to you :&#41;</p>
         <p class = "blurb">Navigation can be done via the top bar. Check out some stuff, would you?</p>
         <img id = "catto" src = "catto.jpg" alt = "cute cat" style = "width:700px;height:500px;">
