--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,11 @@
         </h1>
         <p class = "blurb">I could probably teach someone how to throw a card at least 2 feet in front of them</p>
         <p class = "blurb">That's cool, right?</p>
-        <iframe width="630" height="360" src="https://www.youtube.com/embed/YmGBAiHnK0U" title="Now You See Me 2 (2016) - Disappearing Card Trick Scene (6/11) | Movieclips" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <video width="480" height="360" controls>
+            <source src="movie.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+          </video>
         <footer>Kevin Tsang &#169; 2024</footer>
     </body>
 </html>
